# Refactored-calculus

./: .gitignore  00-READ-ME-FIRST.md  COMPLETE_CHECKLIST.md  IMPLEMENTATION.md  PROJECT_OVERVIEW.md  README.md  START_HERE.md  SUMMARY.md  TEST_GUIDE.md  VISUAL_DEMO.md  cli.py  demo.py  main.py  project_info.py  pyproject.toml  quick_start.py  run.sh  run_test.py  setup.cfg  syntax_check.py  test_imports.py  test_results.md
.github/workflows/: tests.yml
src/: __init__.py
src/calculators/: __init__.py  area_calculator.py  cost_calculator.py  material_calculator.py  waste_calculator.py
src/models/: __init__.py  flooring_material.py  laying_pattern.py  room_specification.py
src/utils/: __init__.py  report_generator.py  unit_converter.py
tests/: test_calculators.py
