[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refactored-calculus"
version = "0.1.0"
description = "Flooring finishes calculator"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "farirayiinnocent-beep" } ]
dependencies = []
