[metadata]
name = refactored-calculus
version = 0.1.0
description = Flooring finishes calculator
author = farirayiinnocent-beep
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
py_modules = cli

[options.entry_points]
console_scripts =
    refcalc = cli:main
